--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,19 @@
                 height: 100%;
             }
             #root{
-                font-family: PingFang SC;
+                /* font-family: PingFang SC; */
                 font-weight: 500;
                 color: #000;
                 font-size: 13px;
                 background: #FFF;
+                font-family: Source Han Sans CN-Regular, Source Han Sans CN;
             }
             .mui-content{
                 background: transparent;
+            }
+
+            :where(.css-dev-only-do-not-override-1m62vyb).ant-drawer .ant-drawer-content{
+                background: transparent !important;
             }
         </style>
     </head>
